- Fix case where 2 urls point to the same articles - Remove invalid feed from demo profile - Allow align attributes on images

--- a/reader-web/src/main/webapp/stylesheets/main.less
+++ b/reader-web/src/main/webapp/stylesheets/main.less
@@ -543,6 +543,16 @@
       .content {
         padding-left: 14px;
         padding-right: 14px;
+        
+        .feed-item-description {
+          &:after {
+				    clear: both;
+				    display: block;
+				    content: " ";
+				    visibility: hidden;
+				    height: 0;
+				  }
+        }
       }
       
       .footer {
